--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Koopman Schilderwerken - Vakwerk voor een Eerlijke Prijs | Twente</title>
+    <title>Koopman Schilderwerken - "Degelijk Werk kent zijn Waarde"</title>
     <meta name="description" content="Professioneel schilder- en glaszetwerk in Twente. Koopman Schilderwerken levert vakwerk voor een eerlijke prijs. Gratis offerte!" />
     <meta name="author" content="Koopman Schilderwerken" />
 
@@ -15,6 +15,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="icon" type="image/png" href="/src/assets/TabIcon.png" />
     <link href="https://fonts.googleapis.com/css?family=Arimo:400,500,700&display=swap" rel="stylesheet" />
   </head>
 
