Update meta description en Instagram carrousel

--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Koopman Schilderwerken - "Degelijk Werk kent zijn Waarde"</title>
-    <meta name="description" content="Professioneel schilder- en glaszetwerk in Twente. Koopman Schilderwerken levert vakwerk voor een eerlijke prijs. Gratis offerte!" />
+    <meta name="description" content="Koopman schilderwerken - Degelijk werk kent zijn Waarde. Professioneel Buiten- en Binnenschilderwerk. Gratis Offerte!" />
     <meta name="author" content="Koopman Schilderwerken" />
 
-    <meta property="og:title" content="Koopman Schilderwerken - Vakwerk voor een Eerlijke Prijs" />
-    <meta property="og:description" content="Professioneel schilder- en glaszetwerk in Twente. Gratis offerte!" />
+    <meta property="og:title" content="Koopman Schilderwerken - Degelijk werk kent zijn Waarde" />
+    <meta property="og:description" content="Professioneel Buiten- en Binnenschilderwerk. Gratis Offerte!" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/src/assets/TabIcon.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:image" content="/src/assets/TabIcon.png" />
     <link rel="icon" type="image/png" href="/src/assets/TabIcon.png" />
     <link href="https://fonts.googleapis.com/css?family=Arimo:400,500,700&display=swap" rel="stylesheet" />
     
